sassi-macros/tests/lihaaf/compile_fail/cacheable_bad_watermark_field.rs
//! `#[cacheable(watermark_field = "...")]` must name an existing field.

use sassi::Cacheable;

#[derive(Cacheable)]
#[cacheable(watermark_field = "updated_at")]
struct MissingWatermarkField {
    id: i64,
    name: String,
}

fn main() {}
